docs(release): v1.35.34 — document migrate-check, pr-impact, explain, repo-ir size flags, cache freshness, spring-audit --ci
Adds full reference docs for commands shipped in sessions 80–93 but
undocumented: migrate-check (27 rules, rule table), pr-impact (CI
usage pattern), explain, repo-ir size-control flags (--max-nodes,
--max-edges, --gzip, --force, --include-tests), cache freshness,
spring-audit --ci / --format github-comment, rename-class, chunk-file.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>